# plywatch

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  PLYWATCH_LOOM_REUSE_ANALYSIS.md  PLYWATCH_PLAN.md  README.md  docker-compose.yml  flower2_frontend_architecture.md  loom_celery_monitoring_ephemeral_analysis.md  loom_monitor_delivery_plan.md  pyproject.toml  pyrightconfig.json  sonar-project.properties
apps/backend/: README.md  pyproject.toml
apps/backend/config/: api.yaml  base.yaml  cache.yaml  celery.yaml
apps/backend/src/plywatch/: __init__.py  config_paths.py  main.py
apps/backend/src/plywatch/bootstrap/: README.md
apps/backend/src/plywatch/metric/: README.md
apps/backend/src/plywatch/monitor/: __init__.py  admin.py  contracts.py  interface.py  use_cases.py
apps/backend/src/plywatch/queue/: README.md  __init__.py  interface.py  models.py  projector.py  repository.py  use_cases.py
apps/backend/src/plywatch/schedule/: interface.py  models.py  projector.py  repository.py  use_cases.py
apps/backend/src/plywatch/shared/: README.md  __init__.py  celery_events.py  event_dispatcher.py  frontend_events.py  in_memory_projection_repository.py  monitor_metrics.py  (+4 more)
apps/backend/tests/: test_api_metrics.py  test_api_monitor_admin.py  test_api_queues.py  test_api_schedules.py  test_api_tasks.py  test_api_workers.py  test_celery_events.py  test_frontend_fallback.py  test_monitor_metrics.py  test_queue_projector.py  test_runtime_config.py  test_task_envelope.py  test_task_families.py  test_task_graph_builder.py  test_task_liveness.py  test_task_models.py  test_task_projector.py  test_worker_projector.py
examples/lab/app-producer/: Dockerfile  README.md  pyproject.toml
examples/lab/app-producer/config/: base.yaml  celery.yaml  worker.yaml
examples/lab/app-producer/tests/: test_native_tasks.py
(+161 files in other folders)
