[project]
name = "plywatch-backend"
version = "0.1.0"
description = "Backend service for Plywatch"
requires-python = ">=3.11"
dependencies = [
    "loom-kernel[cache,celery,config,prometheus,rest,sqlalchemy]==0.2.1.dev29",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/plywatch"]

[tool.pytest.ini_options]
pythonpath = ["apps/backend/src"]
asyncio_mode = "auto"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
loom-kernel = { index = "testpypi" }

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
