[project]
name = "plywatch-backend"
version = "0.1.0"
description = "Backend service for Plywatch"
requires-python = ">=3.11"
dependencies = [
    "loom-kernel[cache,celery,config,prometheus,rest,sqlalchemy]==0.2.1",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plywatch"]
